--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}">
     <link rel="icon" href="../static/images/icon.png?{{ cache_id }}" type="image/png">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="../static/scripts/1-hbnb.js?{{ cache_id }}"></script>
+    <script type="text/javascript" src="../static/scripts/2-hbnb.js?{{ cache_id }}"></script>
     <title>AirBnb Clone</title>
   </head>
   <body>
     <header>
-      <div class="logo">
-      </div>
+      <div class="logo"> </div>
+      <div id="api_status"> </div>
     </header>
     <div class="container">
       <section class="filters">
